--- a/templates/email/base.html.twig
+++ b/templates/email/base.html.twig
@@ -741,7 +741,7 @@
                                                                                         {{ app_name }}.</small>
                                                                                     <a href="{{ url('home') }}"
                                                                                         target="_blank">{{ app_name }}.</a>
-                                                                                    {{ site.phone_number_2}}
+                                                                                    {{ site.tel_1}}
                                                                                     dakar<br>
 
                                                                                     <a href="#"
