--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -1,5 +1,5 @@
-{% extends "main/base.html.twig" %}
-{% block body %}
+{% extends base ~"/base.html.twig" %}
+{% block main %}
 	<nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0">
 		<div class="container">
 			<ol class="breadcrumb">
