--- a/templates/prod/contact/index.html.twig
+++ b/templates/prod/contact/index.html.twig
@@ -28,7 +28,7 @@ function onSubmit(token) {
         </div>
         <div class="container">
             {% include "includes/_alerte.html.twig" %}
-            {% include "lest/_contact.html.twig" %}
+            {% include base ~ "/_contact.html.twig" %}
             <hr class="mt-3 mb-5 mt-md-1">
             <div class="touch-container row justify-content-center">
                 <div class="col-md-9 col-lg-7">
