--- a/templates/prod/shop/_article.html.twig
+++ b/templates/prod/shop/_article.html.twig
@@ -1,3 +1,3 @@
 <div class="col-6 col-md-4 col-lg-4 col-xl-3 article-{{item.id }}">
-	{% include "lest/shop/_article_item.html.twig" %}
+	{% include base ~"/shop/_article_item.html.twig" %}
 </div>
