--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,4 +1,4 @@
-{% extends 'lest/base.html.twig' %}
+{% extends base ~'/base.html.twig' %}
 
 {% block title %}{{'Password Reset Email Sent'|trans}}{% endblock %}
 
