--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,8 +1,8 @@
-{% extends 'main/base.html.twig' %}
+{% extends base ~'/base.html.twig' %}
 
 {% block title %}{{'Reset your password'|trans}}{% endblock %}
 
-{% block body %}
+{% block main %}
 
     <nav aria-label="breadcrumb" class="breadcrumb-nav mb-2">
         <div class="container">
