--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,4 +1,4 @@
-{% extends 'main/base.html.twig' %}
+{% extends base ~'/base.html.twig' %}
 
 {% block title %}{{'Reset your password'|trans}}{% endblock %}
 
