--- a/templates/admin/article/_form.html.twig
+++ b/templates/admin/article/_form.html.twig
@@ -9,6 +9,9 @@
 		{{form_row(form.title)}}
 	</div>
 	<div class="col-lg-12 col-12">
+		{{form_row(form.detail)}}
+	</div>
+	<div class="col-lg-12 col-12">
 		{{form_row(form.description)}}
 	</div>
 	<div class="col-lg-4 col-12">
