--- a/templates/admin/article/edit.html.twig
+++ b/templates/admin/article/edit.html.twig
@@ -51,7 +51,10 @@ name:'Listes des articles'
 											<div class="col-lg-5">
 												{{form_row(form.title)}}
 											</div>
-											<div class="col-lg-7">
+											<div class="col-lg-12 col-12">
+												{{form_row(form.detail)}}
+											</div>
+											<div class="col-lg-12">
 												{{form_row(form.description)}}
 											</div>
 											<div class="col-lg-4">
